# wyas

./: .gitignore  README.md  stack.yaml  test.scm  wyas.cabal
exec/: Main.hs
src/: Cli.hs  Eval.hs  Exception.hs  Lexer.hs  LispVal.hs  Main.hs  Parser.hs  Prim.hs  Repl.hs  Syntax.hs
test/: stdlib_mod.scm  test_fix.scm  test_scope2.scm
test-hs/: Golden.hs  Spec.hs
