name:                wyas
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/coffee-cup/wyas#readme
license:             BSD3
license-file:        LICENSE
author:              Jake Runzer
maintainer:          jakerunzer@gmail.com
copyright:           2017 Jake Runzer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wyas
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Syntax, Lexer, Parser, Eval
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl >= 2.1.3
                     , transformers >= 0.3.0.0 && < 0.6
                     , containers >= 0.4
                     , megaparsec >= 6 && < 7
                     , haskeline >= 0.7 && < 0.8
  default-extensions:  NoMonomorphismRestriction
                     , OverloadedStrings
                     , FlexibleContexts
                     , GeneralizedNewtypeDeriving
