name:                wyas
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/coffee-cup/wyas#readme
license:             BSD3
license-file:        LICENSE
author:              Jake Runzer
maintainer:          jakerunzer@gmail.com
copyright:           2017 Jake Runzer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
                  LispVal,
                  Lexer,
                  Parser,
                  Eval,
                  Prim,
                  Repl,
                  Cli
  default-language:    Haskell2010
  ghc-options:
              -fno-warn-unused-do-bind
              -fno-warn-unused-binds
              -fno-warn-type-defaults
              -fno-warn-type-defaults
              -fno-warn-name-shadowing

              -fwarn-duplicate-exports
              -fwarn-dodgy-exports
              -fwarn-dodgy-imports
              -fwarn-incomplete-patterns
              -fwarn-incomplete-record-updates
              -fwarn-missing-fields
              -fwarn-missing-methods
              -fwarn-orphans
              -fwarn-overlapping-patterns
              -fwarn-unused-imports
              -fwarn-tabs
              -fwarn-unrecognised-pragmas
  build-depends:
                base                 >= 4.8 && <5.0,
                containers           >= 0.5 && <0.6,
                directory            >= 1.2 && <1.3,
                haskeline            >= 0.7 && <0.8,
                mtl                  >= 2.2 && <2.3,
                optparse-applicative >= 0.12 && <0.13,
                megaparsec           >= 6 && <7,
                haskeline            >= 0.7 && <0.8,
                text                 >= 1.2 && <1.3,
                transformers         >= 0.4 && <0.6,
                HTTP -any
  default-extensions:
                     NoMonomorphismRestriction,
                     OverloadedStrings,
                     FlexibleContexts,
                     GeneralizedNewtypeDeriving

executable wyas
                main-is: Main.hs
                build-depends:
                              base >= 4.8 && < 5,
                              wyas
                hs-source-dirs: exec
                default-language: Haskell2010
                default-extensions:
                     NoMonomorphismRestriction,
                     OverloadedStrings,
                     FlexibleContexts,
                     GeneralizedNewtypeDeriving

test-Suite test
           type: exitcode-stdio-1.0
           main-is: Spec.hs
           hs-source-dirs: test-hs
           default-language: Haskell2010
           build-depends:
                         base         >= 4.8 && < 5.0,
                         text         >= 1.2 && <1.3,
                         hspec        >= 2.4 && < 2.5,
                         wyas

test-Suite test-golden
  type: exitcode-stdio-1.0
  main-is: Golden.hs
  hs-source-dirs: test-hs
  default-language: Haskell2010
  build-depends:
    base         >= 4.8 && < 5.0,
    text         >= 1.2 && <1.3,
    tasty        >= 0.11 && <0.12,
    tasty-golden >= 2.3 && <2.5,
    bytestring   >= 0.10.8 && <0.11,
    wyas == 0.1
